# TRAD_BOT

./: .env.example  .env.save  .gitignore  .secrets.baseline  ORIGINAL_REQUEST.md  README.md  pyproject.toml  sandbox_test.py
.agents/: ORIGINAL_REQUEST.md
.agents/auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/auditor_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/challenger_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_exploration/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/orchestrator/: .placeholder  BRIEFING.md  ORIGINAL_REQUEST.md  PROJECT.md  handoff.md  plan.md  progress.md
.agents/reviewer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_explorer_investigate/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/victory_auditor/: .placeholder  BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  verdict.md
.agents/worker_cli_subcommands/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_deployment/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_perp_guards/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_regime_live/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_verification/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/worker_verification_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.github/workflows/: ci.yml
config/: backtest.yaml  ibkr_sentiment.yaml  live.yaml  paper.yaml  regime_switch.yaml
deploy/: LIGHTSAIL.md  go_live.sh  setup.sh
deploy/ibkr_gateway/: .env.example  docker-compose.yml  init-timescaledb.sql
deploy/systemd/: bot.service  ibkr-bot.service  regime-bot.service
docs/: CLI_GUIDE.md  CRYPTO_SENTIMENT.md  FUNDING_CARRY_2SIDED.md  IBKR_SENTIMENT.md  OPERATIONS.md  PAPER_TRADING.md  REGIME_BACKTEST_RUNBOOK.md  REGIME_SHELVED.md  REGIME_SWITCH_STRATEGY.md  SENTIMENT_VERDICT.md  trading_bot_spec_v1.md
scripts/: backtest_bb_squeeze.py  backtest_regime_switch.py  backtest_trend.py  download_history.py  run_backtest.py  run_crypto_sentiment.py  run_dry_run.py  run_ibkr_sentiment.py  tax_export.py  tradbot.py  tradbot_carry.py  tradbot_farb.py  tradbot_ibsent.py  tradbot_regime.py  validate_trend.py
src/: __init__.py  config.py  killswitch.py  logging_setup.py  macos_app.py  main.py  notify.py  scheduler.py  simple_bot.py
src/adapters/: __init__.py  binance.py  exchange_base.py  fake.py  paper_binance.py
src/app/: streamlit_app.py
src/backtest/: __init__.py  bb_squeeze_backtest.py  carry_backtest.py  engine.py  metrics.py  regime_diagnostics.py  regime_switch_backtest.py  sentiment_ab.py  trend_backtest.py  trend_metrics.py  trend_walk_forward.py  walk_forward.py
src/crypto_sentiment/: __init__.py  bot.py  config.py  factory.py  feeds.py  positions.py  universe.py
src/data/: __init__.py  binance_ws.py  historical.py  history.py  market_data.py
src/execution/: __init__.py  engine.py  order.py  spot_only.py
src/funding/: __init__.py  poller.py
src/ibkr_sentiment/: __init__.py  bot.py  config.py  main.py
src/ibkr_sentiment/broker/: __init__.py  base.py  ibkr.py  paper.py  rate_limiter.py
src/ibkr_sentiment/execution/: __init__.py  engine.py
src/ibkr_sentiment/risk/: __init__.py  overlay.py
src/ibkr_sentiment/sentiment/: __init__.py  finbert.py  ingestion.py  llm_gatekeeper.py  models.py  pipeline.py  vector_store.py
src/ibkr_sentiment/signal_engine/: __init__.py  dollar_neutral.py  mapping.py  technical.py
src/ibkr_sentiment/state/: __init__.py  db.py  models.py
src/monitoring/: __init__.py  dashboard.py  digest.py  email.py  telegram_bot.py
src/reconciliation/: __init__.py  reconciler.py
src/risk/: __init__.py  checks.py  manager.py  perp_guards.py
src/sentiment/: __init__.py  ai_sentiment.py  base.py  fear_greed.py
src/state/: __init__.py  db.py  models.py  pnl.py
src/strategy/: __init__.py  bb_squeeze.py  funding_arb.py  funding_carry.py  indicators.py  regime.py  regime_live.py  regime_switch.py  signals.py  sma_trend.py
tests/: conftest.py
tests/integration/: test_binance_testnet.py
tests/unit/: test_ai_sentiment.py  test_audit_followups.py  test_backtest.py  test_bb_squeeze.py  test_bb_squeeze_backtest.py  test_binance_balances.py  test_binance_ws.py  test_bug_regressions.py  test_carry_backtest.py  test_config.py  test_crypto_sentiment.py  test_data_history.py  test_digest.py  test_e2e_paper.py  test_execution_engine_safety.py  test_execution_order.py  test_fake_margin.py  test_funding_carry.py  test_funding_poller.py  test_ibkr_sentiment_basket.py  test_ibkr_sentiment_e2e.py  test_ibkr_sentiment_funnel.py  test_ibkr_sentiment_ingestion.py  test_ibkr_sentiment_paper_broker.py  test_ibkr_sentiment_rate_limiter.py  test_ibkr_sentiment_risk.py  test_ibkr_sentiment_state.py  test_ibkr_sentiment_technicals.py  test_ibkr_sentiment_vector_store.py  test_indicators.py  test_loss_stops.py  test_macos_app.py  test_notifier_and_cron.py  test_paper_adapter.py  test_perp_guards.py  test_reconciler.py  test_regime.py  test_regime_ablation.py  test_regime_diagnostics.py  test_regime_indicators.py  (+18 more)
