[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trad-bot"
version = "0.1.0"
description = "Funding-rate arbitrage bot for Binance (delta-neutral cash-and-carry)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alexandre Bredillot" }]
license = { text = "Proprietary" }
dependencies = [
    "ccxt>=4.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "structlog>=24.1",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "uvloop>=0.19; sys_platform != 'win32'",
    "tenacity>=8.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "detect-secrets>=1.5",
]
dashboard = [
    "streamlit>=1.32",
]

[project.scripts]
trad-bot = "src.main:cli"
trad-backtest = "scripts.run_backtest:main"
trad-dry-run = "scripts.run_dry_run:main"
trad-tax-export = "scripts.tax_export:main"
trad-download-history = "scripts.download_history:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RET", "SIM", "PL"]
ignore = ["E501", "S101", "PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: integration tests (require network / testnet keys)",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
