[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trad-bot"
version = "0.1.0"
description = "Funding-rate arbitrage bot for Binance (delta-neutral cash-and-carry)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alexandre Bredillot" }]
license = { text = "Proprietary" }
dependencies = [
    "ccxt>=4.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "structlog>=24.1",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "uvloop>=0.19; sys_platform != 'win32'",
    "tenacity>=8.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "detect-secrets>=1.5",
]
dashboard = [
    "streamlit>=1.32",
]
# IBKR sentiment bot extras — each is independently optional so a
# minimal install still passes the test suite.
ibkr = [
    "ib_insync>=0.9.86",
]
sentiment = [
    "transformers>=4.40",
    "torch>=2.2",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.40",
]
redis = [
    "redis>=5.0",
]
vector = [
    "qdrant-client>=1.9",
    "chromadb>=0.5",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
trad-bot = "src.main:cli"
tradbot = "scripts.tradbot:main"
trad-backtest = "scripts.run_backtest:main"
trad-dry-run = "scripts.run_dry_run:main"
trad-tax-export = "scripts.tax_export:main"
trad-download-history = "scripts.download_history:main"
ibkr-sentiment-bot = "src.ibkr_sentiment.main:cli"
crypto-sentiment-bot = "scripts.run_crypto_sentiment:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RET", "SIM", "PL"]
ignore = [
    "E501",     # line length — handled by formatter/judgment
    "S101",     # assert — used deliberately outside tests too
    "PLR0913",  # too many arguments
    "PLR2004",  # magic values
    "PLR0911",  # too many returns — CLI/strategy dispatch functions
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLC0415",  # import-outside-top-level — deliberate lazy imports for optional deps
    "UP042",    # str-Enum → StrEnum changes str() semantics; not worth the risk
    "SIM105",   # try/except/pass vs contextlib.suppress — stylistic
    "SIM108",   # ternary vs if/else — stylistic
    "S110",     # try-except-pass — deliberate best-effort cleanup paths
    "S112",     # try-except-continue — deliberate in poll loops
    "ASYNC230", # blocking open() in async — CLI/setup paths, not hot loops
    "ASYNC240", # blocking Path methods in async — same
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR", "E402", "F401"]
# Scripts configure sys.path / dotenv / warnings before importing src.
"scripts/*" = ["E402"]
"src/app/streamlit_app.py" = ["E402"]
# Launchers intentionally shell out (open Terminal.app, osascript, etc.).
"src/macos_app.py" = ["S603", "S607"]
"src/scheduler.py" = ["S603", "S607"]
"src/notify.py" = ["S603", "S607"]
"scripts/tradbot.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: integration tests (require network / testnet keys)",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
